# ciencia-datos-datos-lib-py-matrixdynamodb

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: EXAMPLES_GUIDE.md
dynamodb_curated_library/core/config/: constants.py  job_config.py  job_parameters.py
dynamodb_curated_library/dev_utils/: local_env.py  schema_formatter.py
dynamodb_curated_library/etl/extract/: catalog.py  raw_sources.py  sources.py
dynamodb_curated_library/etl/load/: save.py
dynamodb_curated_library/metadata/: metadata.py
dynamodb_curated_library/models/: dynamodb_models.py  storage_models.py  table.py
dynamodb_curated_library/utils/: banner.py  config_logger.py  logging_config.py  make_path.py
examples/co_delfos_clientes_prn_transformar_customerknowid_module/: co_delfos_clientes_prn_transformar_customerknowid_module.py
examples/co_delfos_productos_srf_transformar_remittances_order_status/: co_delfos_productos_srf_transformar_remittances_order_status.py
examples/co_delfos_productos_srf_transformar_surprise_gift_redeems/: co_delfos_productos_srf_transformar_surprise_gift_redeems.py
tests/: conftest.py
tests/dev_utils/: test_local_env.py  test_schema_formatter.py
tests/flatten_dynamodb/: README.md  __init__.py  test_arrays.py  test_basic_flattening.py  test_columns_as_json.py  test_conflicting_types.py  test_depth_control.py  test_edge_cases.py  test_error_handling.py  test_helper_functions.py  test_user_specific_case.py  test_value_preservation.py
tests/utils/: test_config_logger.py  test_logging_config.py  test_make_path.py
(+55 files in other folders)
